modal layout - booking.html

--- a/public/styles.css
+++ b/public/styles.css
@@ -49,7 +49,7 @@ a {
 
 /* modals */
 .hidden {
-    display: none;
+    display: none !important;
 }
 
 /* menu  */
@@ -94,4 +94,37 @@ section#booking > div.flex.flex-vertical > form.flex.flex-vertical > div {
 
 section#booking p {
     margin: 0;
+}
+
+/* modals */
+.modal-bkg {
+    position: absolute;
+    width: 100vw;
+    height: 100vh;
+    top: 0;
+    left: 0;
+    z-index: 1;
+    background-color: grey;
+
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.modal-container {
+  /* position: fixed;
+  display: flex;
+  justify-content: center;
+  align-items: center; */
+  background-color: white;
+}
+
+.modal {
+  width: 800px;
+  /* height: 400px; */
+  position: relative;
+  padding: 20px;
+
+  align-items: center;
+    justify-content: center;
 }
