--- a/public/styles.css
+++ b/public/styles.css
@@ -79,6 +79,8 @@ form {
 
 section#contact.flex.flex-vertical > div > form.flex.flex-vertical > div.flex{
     gap: 20px;
+    width: 100%;
+    justify-content: space-around;
 }
 
 section#booking > div.flex.flex-vertical > form.flex.flex-vertical {
