--- a/public/styles.css
+++ b/public/styles.css
@@ -5,28 +5,33 @@ body {
 }
 
 /* header  */
-h1 {
+h1, h2, h3, h4, p {
   text-align: center;
+}
+
+h1 {
   font-size: 5rem;
 }
 
 h2 { 
-    text-align: center;
     color: #FFCA72;
     font-size: 3rem;
 }
 
 h3 {
-  text-align: center;
   font-size: 2rem;
   color: #FF4A3B;
+
+  margin: 1rem;
 }
 
 h4 {
-  text-align: center;
   font-size: 1rem;
   color: #FFCA72;
+
+  margin: 1rem;
 }
+
 
 .header {
   background-image: url("./assets/images/banner.jpg");
@@ -167,7 +172,7 @@ section#booking p {
 
 /* modals */
 .modal-bkg {
-    position: absolute;
+    position: fixed;
     width: 100vw;
     height: 100vh;
     top: 0;
@@ -195,14 +200,30 @@ section#booking p {
   padding: 20px;
 
   align-items: center;
-    justify-content: center;
+  justify-content: center;
 }
 
 #menu-modal {
     background-image: url(./assets/images/beef-wrap-large.jpg);
-    background-size: 600px;
+    background-size: 50vw 80vh;
     background-repeat: no-repeat;
     background-position: center;
+    background-color: #FF4A3B;
+}
+
+#menu-modal > div > div {
+  background-color: #9C8172;
+}
+
+#menu-modal > div > div > div:nth-child(1) > h4 {
+  font-size: 2rem;
+  margin: 0;
+}
+
+.item-description {
+  /* color: black; */
+  text-align: center;
+  margin: 0;
 }
 
 /* gallery */
