--- a/public/styles.css
+++ b/public/styles.css
@@ -377,3 +377,35 @@ section#contact.index > div {
   justify-content: space-evenly;
 }
 
+/* footer  */
+footer {
+  background-color: #0A0226;
+  padding: 40px 20px;
+  text-align: center;
+  height: 400px;
+}
+
+.footer-nav ul {
+  padding: 0;
+  margin: 0 auto 20px;
+  justify-content: center;
+  gap: 20px;
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.social-media {
+  margin: 20px 0;
+}
+
+.social-media a {
+  margin: 0 10px;
+  font-size: 20px;
+  display: inline-block;
+  transition: color 0.3s ease;
+}
+
+#footer {
+  height: 400px;
+}
+
