--- a/styles.css
+++ b/styles.css
@@ -436,10 +436,18 @@ h1.logo {
   body > section.header > div > div.logo {
     flex-basis: 100%;
   }
+
+  #menu-modal {
+    background-size: 70vw 80vh;
+  }
 }
 
 @media screen and (max-width: 425px) {
   .footer-nav ul{
     flex-direction: column;
+  }
+
+  #menu-modal {
+    background-size: 90vw 80vh;
   }
 }
